force-app/main/default/objects/InitiativeCommunication__c/InitiativeCommunication__c.object-meta.xml
<CustomObject>
    <label>Initiative Communication</label>
    <nameField>
        <label>InitiativeCommunication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Initiative Communications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>