force-app/main/default/objects/InitiativeCommunication__c/fields/AttendeeStatus__c.field-meta.xml
<CustomField>
    <fullName>AttendeeStatus__c</fullName>
    <label>Attendee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>