force-app/main/default/objects/InitiativeCommunication__c/fields/DaysCushion__c.field-meta.xml
<CustomField>
    <fullName>DaysCushion__c</fullName>
    <label>Days Cushion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>