force-app/main/default/objects/InitiativeCommunication__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative</label>
    <referenceTo>Initiative__c</referenceTo>
    <relationshipLabel>Initiative Communications</relationshipLabel>
    <relationshipName>Initiative_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>