force-app/main/default/objects/InitiativeCommunication__c/fields/InitiativeEvent__c.field-meta.xml
<CustomField>
    <fullName>InitiativeEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiative Event</label>
    <referenceTo>InitiativeEvent__c</referenceTo>
    <relationshipLabel>Initiative Communications</relationshipLabel>
    <relationshipName>Initiative_Communications</relationshipName>
    <type>Lookup</type>
</CustomField>